test/corpus/expressions/variables.txt
================================================================================
unqualified
================================================================================
module Test exports (..)

x = foo1_bar234
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_variable
      (expression_variable_name))))

================================================================================
qualified
================================================================================
module Test exports (..)

x = SomeModule.foo1_bar234
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_variable
      (qualifier)
      (expression_variable_name))))

================================================================================
trailing underscore
================================================================================
module Test exports (..)

x = foo_
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_variable
      (expression_variable_name))))
