test/corpus/module/foreign_declarations.txt
================================================================================
five
================================================================================
module Test exports (..);

foreign five_impl: Int;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (foreign_value_declaration
    name: (foreign_value_declaration_name)
    type_annotation: (type_annotation
      (type_constructor
        (type_constructor_proper_name)))))

================================================================================
map_impl
================================================================================
module Test exports (..);

foreign map_impl : (Array(a), (a) -> b) -> Array(b);
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (foreign_value_declaration
    name: (foreign_value_declaration_name)
    type_annotation: (type_annotation
      (type_function
        parameter: (type_call
          function: (type_constructor
            (type_constructor_proper_name))
          arguments: (type_call_arguments
            argument: (type_variable)))
        parameter: (type_function
          parameter: (type_variable)
          return_type: (type_variable))
        return_type: (type_call
          function: (type_constructor
            (type_constructor_proper_name))
          arguments: (type_call_arguments
            argument: (type_variable)))))))
