test/corpus/patterns/unused.txt
================================================================================
anonymous
================================================================================
module Test exports (..);

x = let _ = f(); in 5;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_let
      (expression_let_value_declaration
        binder: (pattern_unused)
        expression: (expression_call
          function: (expression_variable
            (expression_variable_name))
          arguments: (expression_call_arguments)))
      (expression_int))))

================================================================================
named
================================================================================
module Test exports (..);

x = fn (_ignore) -> 5;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_function
      parameter: (expression_function_parameter
        pattern: (pattern_unused))
      body: (expression_int))))
