test/corpus/patterns/variables.txt
================================================================================
named
================================================================================
module Test exports (..)

x = fn (foo_, bar) -> 5
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_function
      parameter: (expression_function_parameter
        pattern: (pattern_variable))
      parameter: (expression_function_parameter
        pattern: (pattern_variable))
      body: (expression_int))))
