test/corpus/types/parens.txt
================================================================================
nested
================================================================================
module Test exports (..)
x : ((((((a)))))) = 5
--------------------------------------------------------------------------------
